--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTG-8" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Run Buddy Page</title>
     </head>
     <body>
         <!--navigation-->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
             <nav>
                 <!-- Unordered list element -->
-                <ul>
+                <ul style="list-style-type: none">
                     <!-- List item element -->
                     <li>
                         <!-- Anchor element -->
