--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             </h1>
             <nav>
                 <!-- Unordered list element -->
+                <!--<u>-->
                 <ul style="list-style-type: none">
                     <!-- List item element -->
                     <li>
@@ -59,6 +60,10 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy</h2>
+            <div>
+                <a href="#"> Read Our Privacy Policy</a><br />
+                 &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
