style hero form

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </header>
 
         <!-- hero/jumbotron -->
-        <section>
-            <div>
+        <section class="hero">
+            <!-- adding class to the hero section call hero -->
+            <div class="hero-form">
+                <!-- adding class to the div section of the hero form -->
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
                 <!-- Add form element -->
