--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Testing -->
 <html lang="en">
     <head>
         <meta charset="UTG-8" />
@@ -43,11 +44,11 @@
                 <form>
                     <!-- textbox ask for name, email and phone number -->
                     <label for="name">Enter full name:</label>
-                    <input type="text" placeholder="Your Name" name="name" id="name" />
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
                     <label for="email">Enter email adddress:</label>
-                    <input type="email" placeholder="Email Address" name="email" id="email" />
+                    <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
                     <label for="phone">Enter a telephone number:</label>
-                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
                     <!-- radio button -->
                      <p>
                         Have you worked out with a trainer before?
