--- a/index.html
+++ b/index.html
@@ -72,22 +72,45 @@
         <!-- ending the form section -->
 
         <!-- "what we do" section -->
-        <section>
+        <section id="what-we-do">
             <h2>What We Do</h2>
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
-        <!-- "what yo do" section -->
-        <section>
+        <!-- "what you do" section -->
+        <section id="what-you-do">
             <h2>What You Do</h2>
+
+            <div>
+                <h3>Step 1: Fill Out the form Above.</h3>
+                <p>You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <h3>Step 2: consult with One of Our Trainers.</h3>
+                <p>are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+
+            <div>
+                <h3>Step 3: Get Running.</h3>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <h3>step 4: See Results.</h3>
+                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+            </div>
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
+        <section id="your-trainers">
             <h2>Meet The Trainers</h2>
         </section>
 
         <!-- "reach out" section-->
-        <section>
+        <section id="reach-out">
             <h2>Reach Out</h2>
         </section>
 
