--- a/index.html
+++ b/index.html
@@ -84,21 +84,26 @@
             <h2>What You Do</h2>
 
             <div>
+                <!-- insert the first image element-->
+                <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: Fill Out the form Above.</h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-2.svg" alt="" />
                 <h3>Step 2: consult with One of Our Trainers.</h3>
                 <p>are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-3.svg" alt="" />
                 <h3>Step 3: Get Running.</h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
+                <img src="./assets/images/step-4.svg" alt="" />
                 <h3>step 4: See Results.</h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused.</p>
             </div>
