--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
             <!-- also add in the class into the section portion -->
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
         </section>
 
         <!-- "what you do" section -->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <!-- insert the first image element-->
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill Out the form Above.</h3>
+                <h3>Step 1: <span>Fill Out the form Above.</span>span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
