adding css style to flow the trainer section

--- a/index.html
+++ b/index.html
@@ -111,8 +111,19 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section id="your-trainers">
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left"></div>
+                    <h3>Aaron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique perferendis ducimus cumque, repellendus repellat provident possimus quisquam veritatis labore quia quae illo iste mollitia quas cum, nostrum nisi.
+                    </p>
+                </div>
+                </article>
+            </article>
         </section>
 
         <!-- "reach out" section-->
