--- a/index.html
+++ b/index.html
@@ -152,30 +152,29 @@
          </section>
 
         <!-- "reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
-            <div class="contact-info"></div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
-            width="600" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
-        <div>
-            <h3>Run Buddy</h3>
-             <p> 
-                 Any questions or concerns before signing up? <br />
-                Let us know and we'll be happy to talk to you!
-             </p> 
-             <address>
-                 55 Main Street <br />
-                 Some Town, Ca <br />
-                 12345 <br />
-                 P: 555.RUN.BUDZ (555.786.2839) <br />
-                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-             </address>
-        </div>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p> 
+                        Any questions or concerns before signing up? <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p> 
+                    <address>
+                        55 Main Street <br />
+                        Some Town, Ca <br />
+                        12345 <br />
+                        P: 555.RUN.BUDZ (555.786.2839) <br />
+                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                    </address>
+                </div>
+            </div>
         </section>
 
         <!-- footer -->
