add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                       Omnis voluptate nemo dicta totam delectus harum repellendus consequuntur eum, 
+                       impedit nobis sapiente libero voluptatem in eius. 
+                       Repellendus mollitia neque earum quasi.
+                </p>
+            </div>
             <!-- adding class to the hero section call hero -->
             <div class="hero-form">
                 <!-- adding class to the div section of the hero form -->
