--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div>
                 <!-- insert the first image element-->
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the form Above.</span>span></h3>
+                <h3>Step 1: <span>Fill Out the form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
