--- a/index.html
+++ b/index.html
@@ -82,117 +82,125 @@
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
             <!-- also add in the class into the section portion -->
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+            <div class ="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
+            </div>
         </section>
 
         <!-- "what you do" section -->
         <section id="what-you-do" class="steps">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <div class="flex-row">
+                <h2 class="section-title secondary-border">What You Do</h2>
 
-            <div>
-                <!-- insert the first image element-->
-                <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the form Above.</span></h3>
-                <p>You're already here, so why not?</p>
-            </div>
+                <div>
+                    <!-- insert the first image element-->
+                    <img src="./assets/images/step-1.svg" alt="" />
+                    <h3>Step 1: <span>Fill Out the form Above.</span></h3>
+                    <p>You're already here, so why not?</p>
+                </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: consult with One of Our Trainers.</h3>
-                <p>are you here to build muscle, lose weight, or just feel good?</p>
-            </div>
+                <div>
+                    <img src="./assets/images/step-2.svg" alt="" />
+                    <h3>Step 2: consult with One of Our Trainers.</h3>
+                    <p>are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: Get Running.</h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-            </div>
+                <div>
+                    <img src="./assets/images/step-3.svg" alt="" />
+                    <h3>Step 3: Get Running.</h3>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" alt="" />
-                <h3>step 4: See Results.</h3>
-                <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                <div>
+                    <img src="./assets/images/step-4.svg" alt="" />
+                    <h3>step 4: See Results.</h3>
+                    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                </div>
             </div>
         </section>
 
         <!-- "meet the trainers" section -->
         <section id="your-trainers" class="trainers">
-            <h2 class="section-title primary-border">Meet The Trainers</h2>
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left"></div>
-                    <h3>Aaron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique perferendis ducimus cumque, repellendus repellat provident possimus quisquam veritatis labore quia quae illo iste mollitia quas cum, nostrum nisi.
-                    </p>
-                </div>
-            </article>
+            <div class="flex-row">
+                <h2 class="section-title primary-border">Meet The Trainers</h2>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio text-left"></div>
+                        <h3>Aaron Stephens</h3>
+                        <h4>Speed / Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique perferendis ducimus cumque, repellendus repellat provident possimus quisquam veritatis labore quia quae illo iste mollitia quas cum, nostrum nisi.
+                        </p>
+                    </div>
+                </article>
 
-            <!-- second trainer bio -->
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-                </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-            </article>
-            
-            <!-- third trainer bio -->
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-                </p>
-                </div>
-            </article>
+                <!-- second trainer bio -->
+                <article class="trainer">
+                    <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                    </div>
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                </article>
+                
+                <!-- third trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                    <div class="trainer-bio text-left">
+                        <h3>Harry "the Headband" Smith</h3>
+                        <h4>Strength</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                        </p>
+                    </div>
+                </article>
+            </div>
          </section>
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
-            <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy">
-                </iframe>
-                <div class="contact-form">
-                    <h3>Contact Us</h3>
-                    <form>
-                        <label for="contact-name">Your Name</label>
-                        <input type="text" id="contact-name" placeholder="Your Name" />
+            <div class="flex-row"
+                <h2 class="section-title secondary-border">Reach Out</h2>
+                <div class="contact-info">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy">
+                    </iframe>
+                    <div class="contact-form">
+                        <h3>Contact Us</h3>
+                        <form>
+                            <label for="contact-name">Your Name</label>
+                            <input type="text" id="contact-name" placeholder="Your Name" />
 
-                        <label  for="contact-message">Message</label>
-                        <textarea id="contact-message" placeholder="Message"></textarea>
+                            <label  for="contact-message">Message</label>
+                            <textarea id="contact-message" placeholder="Message"></textarea>
 
-                        <button type="submit">Submit</button>
-                    </form>
-                </div>
-                <div>
-                    <h3>Run Buddy</h3>
-                    <p> 
-                        Any questions or concerns before signing up? <br />
-                        Let us know and we'll be happy to talk to you!
-                    </p> 
-                    <address>
-                        55 Main Street <br />
-                        Some Town, Ca <br />
-                        12345 <br />
-                        P: 555.RUN.BUDZ (555.786.2839) <br />
-                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                    </address>
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                    <div>
+                        <h3>Run Buddy</h3>
+                        <p> 
+                            Any questions or concerns before signing up? <br />
+                            Let us know and we'll be happy to talk to you!
+                        </p> 
+                        <address>
+                            55 Main Street <br />
+                            Some Town, Ca <br />
+                            12345 <br />
+                            P: 555.RUN.BUDZ (555.786.2839) <br />
+                            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                        </address>
+                    </div>
                 </div>
             </div>
         </section>
