update 'What You Do' section with flexbox

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
             <!-- also add in the class into the section portion -->
             <div class ="flex-row">
                 <h2 class="section-title primary-border">What We Do</h2>
-                <p>
-                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-                </p>
+                <div class ="flex-row">
+                    <p>
+                        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -167,7 +169,7 @@
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
-            <div class="flex-row"
+            <div class="flex-row">
                 <h2 class="section-title secondary-border">Reach Out</h2>
                 <div class="contact-info">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
