--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <!-- also add in the class into the section portion -->
             <div class ="flex-row">
                 <h2 class="section-title primary-border">What We Do</h2>
-                <div class ="flex-row">
-                    <p>
-                        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-                    </p>
-                </div>
+            </div>
+            <div class ="flex-row">
+                <p>
+                    butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+                </p>
             </div>
         </section>
 
@@ -96,30 +96,55 @@
         <section id="what-you-do" class="steps">
             <div class="flex-row">
                 <h2 class="section-title secondary-border">What You Do</h2>
-
-                <div>
-                    <!-- insert the first image element-->
-                    <img src="./assets/images/step-1.svg" alt="" />
-                    <h3>Step 1: <span>Fill Out the form Above.</span></h3>
-                    <p>You're already here, so why not?</p>
+            </div>
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-1.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Fill Out The Form Above</h4>
+                        <p>You're already here, so why not?</p>
+                    </div>
                 </div>
+            </div>
 
-                <div>
-                    <img src="./assets/images/step-2.svg" alt="" />
-                    <h3>Step 2: consult with One of Our Trainers.</h3>
-                    <p>are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 2.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Consult With One Of Our Trainers</h4>
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
                 </div>
+            </div>
 
-                <div>
-                    <img src="./assets/images/step-3.svg" alt="" />
-                    <h3>Step 3: Get Running.</h3>
-                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-3.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>Get Running.</h4>
+                        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                    </div>
                 </div>
-
-                <div>
-                    <img src="./assets/images/step-4.svg" alt="" />
-                    <h3>step 4: See Results.</h3>
-                    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+            </div>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                    <div class="step-img">
+                        <img src="./assets/images/step-4.svg" alt="" />
+                    </div>
+                    <div class="step-text">
+                        <h4>See Results</h4>
+                        <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -128,9 +153,10 @@
         <section id="your-trainers" class="trainers">
             <div class="flex-row">
                 <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
                 <article class="trainer">
                     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                    <div class="trainer-bio text-left"></div>
+                    <div class="trainer-bio text-left">
                         <h3>Aaron Stephens</h3>
                         <h4>Speed / Strength</h4>
                         <p>
@@ -171,6 +197,7 @@
         <section id="reach-out" class="contact">
             <div class="flex-row">
                 <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
                 <div class="contact-info">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
                     style="border:0;" 
