--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTG-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTG-8" />
         <title>Run Buddy Page</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
@@ -95,7 +95,7 @@
             <div>
                 <!-- insert the first image element-->
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the form Above.</span>span></h3>
+                <h3>Step 1: Fill Out the form Above.</h3>
                 <p>You're already here, so why not?</p>
             </div>
 
