--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </h1>
             <nav>
                 <!-- Unordered list element -->
-                <ul style="list-style-type: none">
+                <ul>
                     <!-- List item element -->
                     <li>
                         <!-- Anchor element -->
@@ -83,7 +83,7 @@
         <section id="what-we-do" class="intro">
             <!-- also add in the class into the section portion -->
             <div class ="flex-row">
-                <h2 class="section-title primary-border">What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             </div>
             <div class ="flex-row">
                 <p>
@@ -157,8 +157,8 @@
             <div class="trainers">
                 <article class="trainer">
                     <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                    <div class="trainer-bio text-left">
-                        <h3 class="trainer-name">Aaron Stephens</h3>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
                         <h4 class="trainer-role">Speed / Strength</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus maiores similique perferendis ducimus cumque, repellendus repellat provident possimus quisquam veritatis labore quia quae illo iste mollitia quas cum, nostrum nisi.
@@ -169,7 +169,7 @@
                 <!-- second trainer bio -->
                 <article class="trainer">
                     <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-                    <div class="trainer-bio text-right">
+                    <div class="trainer-bio text">
                         <h3 class="trainer-name">Joanna Gill</h3>
                         <h4 class="trainer-role">Endurance</h4>
                         <p>
@@ -191,22 +191,21 @@
                         </p>
                     </div>
                 </article>
-            </div>    
             </div>
          </section>
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
-            <div class="flex-row">
-                <h2 class="section-title secondary-border">Reach Out</h2>
+            <div class="flex-out">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             </div>
-                <div class="contact-info">
-                    <div>
-                        <h3>Run Buddy</h3>
-                        <p> 
-                            Any questions or concerns before signing up? <br />
-                            Let us know and we'll be happy to talk to you!
-                        </p> 
+            <div class="contact-info">
+                <div>
+                    <h3>Run Buddy</h3>
+                    <p> 
+                        Any questions or concerns before signing up? <br />
+                        Let us know and we'll be happy to talk to you!
+                    </p> 
 
                         <address>
                             55 Main Street <br />
@@ -215,26 +214,27 @@
                             P: 555.RUN.BUDZ (555.786.2839) <br />
                             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                         </address>
-                    </div>
+                </div>
+               
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form>
+                        <label for="contact-name">Your Name</label>
+                        <input type="text" id="contact-name" placeholder="Your Name" />
 
-                    <div class="contact-form">
-                        <h3>Contact Us</h3>
-                        <form>
-                            <label for="contact-name">Your Name</label>
-                            <input type="text" id="contact-name" placeholder="Your Name" />
+                        <label  for="contact-message">Message</label>
+                        <textarea id="contact-message" placeholder="Message"></textarea>
 
-                            <label  for="contact-message">Message</label>
-                            <textarea id="contact-message" placeholder="Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+             
 
-                            <button type="submit">Submit</button>
-                        </form>
-                    </div>
-
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy">
-                    </iframe>   
+                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3122.334467582551!2d-123.00285027083434!3d38.502996371700476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80841f59e5cab239%3A0xe6323937581f5e45!2s14080%20Mill%20St%2C%20Guerneville%2C%20CA%2095446!5e0!3m2!1sen!2sus!4v1631853001823!5m2!1sen!2sus" 
+                 style="border:0;" 
+                 allowfullscreen="" 
+                 loading="lazy">
+                 </iframe>
             </div>
         </section>
 
