--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTG-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTG-8" />
         <title>Run Buddy Page</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
